--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,29 @@
 .navbar {
-    display: flex;
-    width: 100%;
-    height: 2em;
-    background-color: aqua;
+  display: flex;
+  align-items: stretch;
+  width: 100%;
+  height: 3em;
+  background-color: rgb(0, 255, 221);
+}
+
+.navbar_buttonlink {
+  height: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  width: 4rem;
+  background-color: rgb(0, 162, 255);
+  margin: auto; 
+  color: white;
+  text-decoration: none;
+  border-radius: 5rem;
+  transition: 200ms;
+}
+
+.navbar_buttonlink:hover {
+  background-color: rgb(0, 119, 255);
+  transition: 200ms;
+  border-color: cornflowerblue;
+  border-width: 10px;
 }
